--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "scripts": {
     "dev": "webpack serve",
+    "check-types": "tsc -b",
     "build": "webpack",
     "format": "prettier --write .",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -26,6 +27,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
