--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "babel-loader": "^8.2.3",
@@ -51,6 +52,7 @@
   "dependencies": {
     "core-js": "^3.20.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5"
   }
 }
