--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
     "strict": true,
     "lib": ["dom", "dom.iterable", "esnext"]
   },
-  "include": ["./src/**/*"]
+  "include": [
+    "./src/**/*",
+  ]
 }
