--- a/codebuild_tf_apply/buildspec.yml
+++ b/codebuild_tf_apply/buildspec.yml
@@ -3,4 +3,4 @@ version: 0.2
 phases:
   build:
     commands:
-      - echo "Run terraform apply from $BRANCH branch"
+      - echo "Run terraform apply in $TARGET_WORKSPACE workspace"
