--- a/codebuild_tf_apply/buildspec.yml
+++ b/codebuild_tf_apply/buildspec.yml
@@ -1,6 +1,19 @@
 version: 0.2
 
+env:
+  variables:
+    TF_IN_AUTOMATION: "true"
+
 phases:
+  install:
+    commands:
+      - TF_VERSION=$(cat .terraform-version)
+      - curl -s -qL -o terraform_install.zip https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip
+      - unzip terraform_install.zip -d /usr/bin/
+      - chmod +x /usr/bin/terraform
   build:
     commands:
-      - echo "Run terraform apply in $TARGET_WORKSPACE workspace"
+      - cd frontend
+      - terraform workspace select ${TARGET_WORKSPACE} || terraform workspace new ${TARGET_WORKSPACE}
+      - terraform init
+      - ./scripts/deploy.sh -input=false -auto-approve
