--- a/codebuild_tf_apply/buildspec.yml
+++ b/codebuild_tf_apply/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   install:
     commands:
       - TF_VERSION=$(cat .terraform-version)
-      - curl -s -qL -o terraform_install.zip https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip
+      - curl -s -qL -o terraform_install.zip https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_arm64.zip
       - unzip terraform_install.zip -d /usr/bin/
       - chmod +x /usr/bin/terraform
   build:
