--- a/codebuild_tf_apply/buildspec.yml
+++ b/codebuild_tf_apply/buildspec.yml
@@ -14,6 +14,7 @@ phases:
   build:
     commands:
       - cd frontend
+      - terraform init
       - terraform workspace select ${TARGET_WORKSPACE} || terraform workspace new ${TARGET_WORKSPACE}
       - terraform init
       - ./scripts/deploy.sh -input=false -auto-approve
