--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2019",
+    "target": "ES6",
     "sourceMap": true,
     "allowJs": true,
     "resolveJsonModule": true,
